[tool.poetry]
name = "siis-key-value-store"
version = "0.0.0"
license = "OGL-UK-3.0"
description = "Internal persistence API for settings, preferences and state used in the SIIS frontend application"
authors = [
    "Felix Fennell <felnne@bas.ac.uk>"
]
readme = "README.md"
homepage = "https://gitlab.data.bas.ac.uk/MAGIC/SIIS/siis-web-app"
repository = "https://gitlab.data.bas.ac.uk/MAGIC/SIIS/siis-web-app"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Private :: Internal"
]

packages = [
    {include = "siis_key_value_store"},
]

[tool.poetry.dependencies]
Flask = "^1.1.1"
python = "^3.6"
flask-cors = "^3.0.9"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
bandit = "^1.6.2"
pytest = "^5.3.2"
pytest-cov = "^2.8.1"
pytest-flask = "^0.15.0"
pytest-random-order = "^1.0.4"
tomlkit = "^0.6.0"

[tool.black]
line-length = 120
target-version = ['py36']
include = '\.pyi?$'
exclude = ''

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
